:wrench: updated the CODEOWNERS file Created automatically by ghostmonitor/github-config

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,6 +1,6 @@
 # Github will automatically request reviews from the owners on new Pull Requests:
 
-*       @ghostmonitor/integrations
+*       @ghostmonitor/developer
 
 
 # --------------
